--- a/css/site.css
+++ b/css/site.css
@@ -18,6 +18,11 @@ header {
     display: flex;
 }
 
+header img {
+  inline-size: 200px;
+  block-size: 100%;
+}
+
 header h2 {
     margin-inline-end: auto;
 }
